[package]
name = "aw-man"
version = "0.1.0"
edition = "2024"
description = "Awused's personal image and manga viewer"
readme = "README.md"
license = "MIT"
keywords = ["manga", "image-viewer"]
homepage = "https://github.com/awused/aw-man"
repository = "https://github.com/awused/aw-man"
links = "GTK4, X11, libjxl, libarchive"

[dependencies]
ahash = "0.8.12"
awconf = { git = "https://github.com/awused/awconf" }
aw-upscale = { git = "https://github.com/awused/aw-upscale" }
clap = { version = "4.5.47", features = ["derive"] }
color-eyre = "0.6.5"
compress-tools = "0.15.1"
derive_more = { version = "2.0.1", default-features = false, features = ["add", "add_assign", "deref", "deref_mut", "debug", "display", "from"] }
dirs = "6.0.0"
flume = { version = "0.11.1", default-features = false, features = ["async"] }
futures-util = { version = "0.3.31", default-features = false }
gtk = { package = "gtk4", features = ["v4_16"], version = "0.10.1" }
# Disable jpeg_rayon due to https://github.com/image-rs/jpeg-decoder/issues/227
image = { version = "0.25.8", default-features = false, features = ["avif-native", "bmp", "dds", "exr", "ff", "gif", "hdr", "ico", "jpeg", "png", "pnm", "qoi", "tga", "tiff", "webp"] }
libc = "0.2.175"
ouroboros = "0.18.5"
rayon = "1.11.0"
regex = "1.11.2"
serde = { version = "1.0.225", default-features = false, features = ["derive", "std"] }
serde_json = "1.0.145"
tempfile = "3.22.0"
tokio = { version = "1.47.1", features = ["fs", "net", "macros", "process", "rt", "sync", "time"] }
toml = "0.9.6"

# Tracing
nu-ansi-term = "0.50.1"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# Glium stuff
cgmath = "0.18.0"
epoxy = "0.1.0"
gl = "0.14.0"
#glium = { version = "0.34.0", default-features = false }
glium = { default-features = false, git = "https://github.com/awused/glium", branch = "bad-idea" }
libloading = "0.8.8"

# OpenCL
ocl = { version = "0.19.7", optional = true }


[target.'cfg(unix)'.dependencies]
jpegxl-rs = { version = "0.11.2", default-features = false, features = [ "image", "vendored" ] }
signal-hook = "0.3.18"

[target.'cfg(target_os = "linux")'.dependencies]
gdk4-x11 = "0.10.1"
tikv-jemallocator = { version = "0.6.0", features = [ "background_threads" ] }

[target.'cfg(windows)'.dependencies]
ctrlc = "3.5.0"
futures-executor = "0.3.31"
jpegxl-rs = { version = "0.11.2", default-features = false, features = [ "image" ] }
uds_windows = "1.1.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62.0"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
    "Win32_Networking_WinSock",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]


[dev-dependencies]
criterion = "0.7.0"
rand = "0.9.2"

[build-dependencies]
metadeps = "1.1.2"
pkg-config = "0.3.32"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0.5"


[package.metadata.pkg-config]
gtk4 = "4.12"
libarchive = "3.4"
# libjxl = "0.3.7"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
overflow-checks = false

# Without this dev doesn't build on msvc
# TODO -- is this still true?
# [profile.dev.package."paste"]
# opt-level = 1



[features]
default = ["opencl"]
benchmarking = ["opencl"]
# Enable console IO on Windows
windows-console = []
opencl = ["dep:ocl"]

[[bench]]
name = "benchmarks"
harness = false
required-features = ["benchmarking"]
